# command-runner-mcp-server

./: .gitignore  .mcp.json  Cargo.toml  Makefile  README.md  executor.go  executor_test.go  go.mod  main.go  result.go  result_test.go  tools.go  tools_test.go
src/: executor.rs  main.rs  request.rs  security.rs  server.rs
src/tools/: git.rs  ls.rs  mod.rs
