[package]
name = "command-runner-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io", "macros", "schemars"] }
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
